@@ -1,14 +1,3 @@
-buildscript {
-    repositories {
-        mavenLocal()
-        maven { url = 'https://maven.minecraftforge.net/' }
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:[5.1.39,5.2.0)'
-    }
-}
-
 import java.nio.file.Files
 import net.minecraftforge.forge.tasks.*
 import com.mohistmc.tasks.*
@@ -29,9 +18,11 @@ import net.minecraftforge.forge.tasks.checks.CheckTask
 
 plugins {
     id 'com.github.ben-manes.versions' version '0.36.0'
-    id 'net.minecraftforge.gradleutils' version '2.+'
+    id 'net.minecraftforge.gradleutils' version '[2.0.13,)'
     id 'eclipse'
-    id 'de.undercouch.download' version '5.1.3'
+    id 'de.undercouch.download' version '5.4.0'
+    id 'net.neoforged.gradle.patcher' version '[6.0.12,6.2)' apply false
+    id 'net.neoforged.gradle.mcp' version '[6.0.12,6.2)' apply false
 }
 
 init() //Init all our extension methods!
@@ -96,17 +87,18 @@ subprojects {
         maven { url 'https://hub.spigotmc.org/nexus/content/groups/public/' }
         maven { url 'https://maven.mohistmc.com/' }
         maven { url 'https://maven.izzel.io/releases' }
+        maven { url = 'https://maven.neoforged.net/releases' }
     }
     java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
     tasks.withType(JavaCompile).configureEach {
         options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
-        options.compilerArgs << "-Xlint:-unchecked" << "-Xlint:-deprecation" << "-Xlint:-dep-ann" << "-Xlint:-removal"// Mohist ignore compile warnings
+        options.warnings = false // Shutup deprecated for removal warnings
     }
 }
 
 project(':mcp') {
-    apply plugin: 'net.minecraftforge.gradle.mcp'
+    apply plugin: 'net.neoforged.gradle.mcp'
     mcp {
         config MC_VERSION + '-' + MCP_VERSION
         pipeline = 'joined'
@@ -115,7 +107,7 @@ project(':mcp') {
 
 project(':clean') {
     evaluationDependsOn(':mcp')
-    apply plugin: 'net.minecraftforge.gradle.patcher'
+    apply plugin: 'net.neoforged.gradle.patcher'
 
     dependencies {
         implementation 'net.minecraftforge:forgespi:' + SPI_VERSION
@@ -291,111 +283,6 @@ def sharedFmlonlyForge = { Project prj ->
         }
     }
 
-    prj.tasks.userdevConfig {
-        def launchPrefix = prj.name == "forge" ? "forge" : "fml"
-        getArtifacts(prj, prj.configurations.installer, true).each { key, lib -> libraries.add(lib.name) }
-        getArtifacts(prj, prj.configurations.moduleonly, true).each { key, lib ->
-            libraries.add(lib.name)
-            modules.add(lib.name)
-        }
-        for (child in prj.ext.PACKED_DEPS) {
-            libraries.add(getMavenDep(rootProject.tasks.findByPath(child)))
-        }
-        //libraries.add("${project.group}:${project.name}:${project.version}:launcher")
-        inject = '' // We don't have a userdev sourceset anymore. Empty as a gradle workaround...
-        runs {
-            server {
-                environment 'MOD_CLASSES', '{source_roots}'
-                environment 'MCP_MAPPINGS', '{mcp_mappings}'
-
-                if (prj.name == 'forge') {
-                    property 'forge.enableGameTest', 'true'
-                }
-
-                args '--launchTarget', "${launchPrefix}serveruserdev"
-            }
-
-            if (prj.name == 'forge') {
-                gameTestServer {
-                    environment 'MOD_CLASSES', '{source_roots}'
-                    environment 'MCP_MAPPINGS', '{mcp_mappings}'
-
-                    args '--launchTarget', "${launchPrefix}gametestserveruserdev"
-                }
-            }
-
-            data {
-                environment 'MOD_CLASSES', '{source_roots}'
-                environment 'MCP_MAPPINGS', '{mcp_mappings}'
-
-                args '--launchTarget', "${launchPrefix}datauserdev"
-                args '--assetIndex', '{asset_index}'
-                args '--assetsDir', '{assets_root}'
-            }
-        }
-    }
-
-    def userdevRuns = prj.tasks.userdevConfig.runs
-    for (def run : prj.patcher.runs + userdevRuns) {
-        if (run.parents) continue // We already added this to the parent run config
-        //run.property 'bsl.debug', 'true'
-        run.main 'cpw.mods.bootstraplauncher.BootstrapLauncher'
-
-        run.args '--gameDir', '.'
-        run.args '--fml.forgeVersion', FORGE_VERSION
-        run.args '--fml.mcVersion', MC_VERSION
-        run.args '--fml.forgeGroup', prj.group
-        run.args '--fml.mcpVersion', MCP_VERSION
-
-        run.jvmArgs '-Djava.net.preferIPv6Addresses=system'
-
-        if (run.name.contains('client')) {
-            run.client true
-        } else {
-            run.client false
-        }
-
-        // SecureJarHandler bootstrap values.
-        run.property 'ignoreList', prj.configurations.moduleonly.files.collect {it.name.replaceAll(/([-_]([.\d]*\d+)|\.jar$)/, '') }.join(',') + ",client-extra,fmlcore,javafmllanguage,lowcodelanguage,mclanguage,${prj.name}-"
-        // FIXME: Without this jna doesn't work at runtime. Someone figure out why please?
-        run.property 'mergeModules', 'jna-5.10.0.jar,jna-platform-5.10.0.jar,java-objc-bridge-1.0.0.jar'
-        if (userdevRuns.contains(run)) {
-            run.property 'legacyClassPath.file', '{minecraft_classpath_file}'
-            run.jvmArgs '-p', '{modules}'
-        } else {
-            run.property 'legacyClassPath.file', '{runtime_classpath_file}'
-            run.jvmArgs '-p', prj.configurations.moduleonly.files.collect { it.path }.join(File.pathSeparator)
-        }
-        run.jvmArgs '--add-modules', 'ALL-MODULE-PATH'
-        run.jvmArgs '--add-opens', 'java.base/java.util.jar=cpw.mods.securejarhandler'
-        run.jvmArgs '--add-exports', 'java.base/sun.security.util=cpw.mods.securejarhandler'
-        run.jvmArgs '--add-exports', 'jdk.naming.dns/com.sun.jndi.dns=java.naming'
-    }
-    for (def run : prj.patcher.runs) {
-        if (run.parents) continue // We already added this to the parent run config
-        run.workingDirectory prj.file('run')
-
-        if (run.name.contains('client') || run.name.contains('data')) {
-            run.property 'nativesDirectory', prj.extractNatives.output.get().asFile
-            run.args '--assetsDir', prj.downloadAssets.output
-            run.args '--assetIndex', "{asset_index}"
-        }
-
-        if (run.name.contains('client')) {
-            run.property 'org.lwjgl.system.SharedLibraryExtractDirectory', 'lwjgl_dll'
-            run.args '--username', 'Dev'
-            run.args '--version', prj.name
-            run.args '--uuid', '0'
-            run.args '--accessToken', '0'
-            run.args '--userType', 'mojang'
-            run.args '--versionType', 'release'
-        }
-
-        if (prj.name == 'forge') {
-            run.environment 'FORGE_SPEC', prj.SPEC_VERSION
-        }
-    }
-
     eclipse.project.resourceFilter {
         appliesTo = 'FOLDERS'
         type = 'EXCLUDE_ALL'
@@ -456,7 +343,7 @@ def sharedFmlonlyForge = { Project prj ->
 project(':forge') {
     evaluationDependsOn(':clean')
     apply plugin: 'java-library'
-    apply plugin: 'net.minecraftforge.gradle.patcher'
+    apply plugin: 'net.neoforged.gradle.patcher'
 
     sourceSets {
         main {
